salesforce-main/src/main/default/objects/KSB__c/KSB__c.object-meta.xml
<CustomObject>
    <description>Self Assessment KSBs (Knowledge, Skills, Behaviours)</description>
    <label>KSB</label>
    <nameField>
        <displayFormat>KSB-{0000}</displayFormat>
        <label>KSB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KSBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>