salesforce-main/src/main/default/objects/KSB__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>A numeric value based on the users ability corresponding to the question (ranging 1 - 4 - Weakest/Strongest)</description>
    <label>Answer</label>
    <length>2</length>
    <type>Text</type>
</CustomField>