salesforce-main/src/main/default/objects/KSB__c/fields/Experience_Information__c.field-meta.xml
<CustomField>
    <fullName>Experience_Information__c</fullName>
    <label>Experience Information</label>
    <type>TextArea</type>
</CustomField>