salesforce-main/src/main/default/objects/KSB__c/fields/Line_Manager_Workplace_Activity__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Workplace_Activity__c</fullName>
    <label>Line Manager Workplace Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>