salesforce-main/src/main/default/objects/KSB__c/fields/Modified_By_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Line_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the current changes to the KSB were initiated by the Line Manager.</description>
    <label>Modified By Line Manager</label>
    <type>Checkbox</type>
</CustomField>